added initial code to HTML file

--- a/index.html
+++ b/index.html
@@ -1,9 +1,37 @@
-!DOCTYPE <html>
+<!DOCTYPE html>
     <head> 
-        <title>Paul Song</title>
+        <meta charset="UTF-8" />
+        <meta name="author" content="Paul Song" />
+        <meta 
+            name="description" 
+            content="This resumes provides information about Paul Song's professional summary, work history, education, skill, and certifications" />
         <link href="./resources/css/index.css" rel="stylesheet"/>
+        <title>Resume</title>
     </head>
 
+    <!--remember inline block display for contact info-->
+    <h1>Paul Song</h1>
+    
+    <h2>Contact</h2>
+        <h3>Address</h3>
+            <p>Atlanta, Georgia 30306</p>
+    
+        <h3>Phone</h3>
+            <p>555-555-5023</p>
+
+        <h3>E-mail</h3>
+            <p>paulsong20@gmail.com</p>
+
+
+
+    <h2>Professional Summary</h2>
+        <p>Organized and dedicated self-starter offering six years of professional
+            work experience. Skilled in working under pressure, adapting to new
+            situations, and collaborating with multiple departments. Key attributes
+            include complex problem solving and software troubleshooting. </p>
+
+    <h2>Work History</h2>
+        <p .date>05-2020 - Current</p>
 
 
 
